--- a/shelter/pages/css/main.css
+++ b/shelter/pages/css/main.css
@@ -7,8 +7,6 @@
 
 .header {
   width: 100vw;
-  position: absolute;
-  top: 60px;
 }
 
 .wrapper {
@@ -36,20 +34,18 @@
   color: #F1CDB3;
   font-family: Georgia;
   font-weight: 400;
-  font-size: 2rem;
-  letter-spacing: 0.12rem;
+  font-size: 32px;
+  letter-spacing: 6%;
   line-height: 110%;
 }
 
 .logo__subtitle {
   font-family: Arial;
   font-weight: 400;
-  font-size: 0.8125rem;
+  font-size: 13px;
   color: #FFFFFF;
   line-height: 110%;
-  letter-spacing: 0.09rem;
-  margin-top: 10px;
-  text-align: center;
+  letter-spacing: 10%;
 }
 
 .menu {
@@ -70,7 +66,8 @@
           justify-content: space-between;
   font-family: Arial;
   font-weight: 400;
-  font-size: 0.9375rem;
+  font-size: 15px;
+  line-height: 160%;
 }
 
 .list__item {
@@ -85,7 +82,6 @@
 .list__link {
   color: #FFFFFF;
   text-decoration: none;
-  line-height: 160%;
 }
 
 .list__link_disabled {
@@ -96,29 +92,13 @@
   border-bottom: solid 3px #F1CDB3;
 }
 
-.main {
-  width: 100vw;
+.hero {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.hero {
-  padding-top: 180px;
-  background: url(../../assets/images/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), #211F20;
 }
 
 .hero-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.content-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,41 +109,22 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 84px;
 }
 
-.content-section__title {
-  font-size: 2.75rem;
+.hero-content__title {
+  font-size: 44px;
   font-family: Georgia;
   font-weight: 400;
   letter-spacing: 10%;
   line-height: 130%;
   color: #FFFFFF;
-  max-width: 19.375rem;
 }
 
-.content-section__subtitle {
-  max-width: 28.75rem;
-  margin-top: 2.625rem;
-  font-size: 0.9375rem;
+.hero-content__subtitle {
+  font-size: 15px;
   font-family: Arial;
   font-weight: 400;
   line-height: 160%;
   color: #CDCDCD;
-}
-
-.content-section__button {
-  padding: 15px 45px;
-  width: 207px;
-  border: none;
-  border-radius: 100px;
-  background-color: #F1CDB3;
-  margin-top: 41px;
-  color: #292929;
-  font-family: Georgia;
-  font-weight: 400;
-  font-size: 1.06rem;
-  line-height: 130%;
-  letter-spacing: 6%;
 }
 /*# sourceMappingURL=main.css.map */
